add user methods (add, delete, update) \n add bcrypt
