# src/Entitys/user.entity.ts
@@ -1,18 +1,0 @@
-import { Entity, PrimaryGeneratedColumn, Column } from "typeorm";
-
-@Entity()
-export class User {
-
-    @PrimaryGeneratedColumn()
-    id: number;
-
-    @Column()
-    name: string;
-
-    @Column()
-    email: string;
-
-    @Column()
-    password: string;
-
-}
